--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 {
 	"files.exclude": {
-		"**/*.js": {
-			"when": "$(basename).ts"
-		},
-		"**/*.js.map": {
-			"when": "$(basename).ts"
-		},
-		"**/*.d.ts": {
-			"when": "$(basename).ts"
-		}		
+		"**/*.js": true,
+		"**/*.js.map": true,
+		"**/*.d.ts": true		
 	},
 	"typescript.tsdk": "./node_modules/typescript/lib", // we want to use the TS server from our node_modules folder to control its version
 	"editor.formatOnType": true,
